--- a/chinese.html
+++ b/chinese.html
@@ -70,7 +70,27 @@
 
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                 <tbody>
+                                <tr>
+                    <td style="padding:20px;width:25%;vertical-align:middle">
+                        <img src="./images/ph_reg_teaser.jpg" alt="PontTuset" width="160" style="border-style: none">
+                    </td>
+                    <td width="75%" valign="middle">
+                        <a href="https://arxiv.org/abs/2505.21501" id="phreg">
+                            <span class="papertitle">Vision Transformers with Self-Distilled Registers</span>
+                        </a>
+                        <br>
+                        <a href="https://openreview.net/profile?id=~Yinjie_Chen3">Yinjie Chen</a>, <a href="https://openreview.net/profile?id=~Zipeng_Yan1">Zipeng Yan</a>, <a href="http://chongzhou96.github.io/">Chong Zhou</a>, <a href="http://daibo.info/">Bo Dai</a>, <strong>Andrew F. Luo</strong>
+                        <br>
 
+                        <span> <em>in submission</em> </span>
+                        <br>
+                        <a href="https://arxiv.org/abs/2505.21501">arxiv
+                            page</a> /
+                            <a href="data/PH_reg_bib.html">bibtex</a>
+                        <p></p>
+                        <p>We show that artifacts can be removed from pre-trained ViTs without any labeled data by introducing registers in post-training. Our method uses a model combined with test-time augmentation to distill itself, leading to significant improvements in open-vocabulary segmentation and dense prediction tasks.</p>
+                    </td>
+                </tr>
                 <tr>
                     <td style="padding:20px;width:25%;vertical-align:middle">
                         <img src="./images/Brain_CoRL_teaser.jpg" alt="PontTuset" width="160" style="border-style: none">
