--- a/chinese.html
+++ b/chinese.html
@@ -110,7 +110,7 @@
                             page</a> /
                             <a href="data/Braincorl_bib.html">bibtex</a>
                         <p></p>
-                        <p>We show how to construct high-visual cortex encoders that can generalize across subjects, scanners, voxel sizes, protocols, and images without any additional finetuning by using meta-learning across subjects and in-context learning across stimuli.</p>
+                        <p>We show how to construct higher visual cortex encoders that can generalize across subjects, scanners, voxel sizes, protocols, and images without any additional finetuning by using meta-learning across subjects and in-context learning across stimuli.</p>
                     </td>
                 </tr>
 
