--- a/chinese.html
+++ b/chinese.html
@@ -79,7 +79,9 @@
                             <span class="papertitle">Vision Transformers with Self-Distilled Registers</span>
                         </a>
                         <br>
-                        <a href="https://openreview.net/profile?id=~Yinjie_Chen3">Yinjie Chen</a>, <a href="https://openreview.net/profile?id=~Zipeng_Yan1">Zipeng Yan</a>, <a href="http://chongzhou96.github.io/">Chong Zhou</a>, <a href="http://daibo.info/">Bo Dai</a>, <strong>Andrew F. Luo</strong>
+                        <a href="https://openreview.net/profile?id=~Yinjie_Chen3">Yinjie Chen*</a>, <a href="https://openreview.net/profile?id=~Zipeng_Yan1">Zipeng Yan*</a>, <a href="http://chongzhou96.github.io/">Chong Zhou</a>, <a href="http://daibo.info/">Bo Dai</a>, <strong>Andrew F. Luo</strong>
+                        <br>
+                        * Co-first authors
                         <br>
 
                         <span> <em>in submission</em> </span>
