--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                             <span class="papertitle">Prototype memory and attention mechanisms for few shot image generation</span>
                         </a>
                         <br>
-                        <a href="https://crazy-jack.github.io/">Tianqin Li*</a>, <a href="https://zijieli-jlee.github.io/">Zijie Li*</a>, <strong>Andrew F. Luo</strong>, Harold Rockwell, <a href="https://sites.google.com/view/barati">Amir Barati Farimani</a>, <a href="https://www.cnbc.cmu.edu/~tai/">Tai Sing Lee</a>
+                        <a href="https://crazy-jack.github.io/">Tianqin Li*</a>, <a href="https://zijieli-jlee.github.io/">Zijie Li*</a>, <strong>Andrew F. Luo</strong>, <a href="https://cns.uchicago.edu/program/students/harold-rockwell">Harold Rockwell, <a href="https://sites.google.com/view/barati">Amir Barati Farimani</a>, <a href="https://www.cnbc.cmu.edu/~tai/">Tai Sing Lee</a>
 
                         <br>
                         <em>ICLR 2022</em>
