--- a/chinese.html
+++ b/chinese.html
@@ -24,7 +24,7 @@
                         <p class="name" style="text-align: center;">
                             Andrew Luo
                         </p>
-                        <p> 我是<a href="https://www.hku.hk/">香港大学</a>助理教授，由香港大学<a href="https://datascience.hku.hk/">数据科学研究院</a>和<a href="https://psychology.hku.hk/people/andrew-luo/">心理学系</a>于 2024 年 10 月合聘。
+                        <p> 我是<a href="https://www.hku.hk/">香港大学</a>助理教授，博士生导师，由香港大学<a href="https://datascience.hku.hk/">数据科学研究院</a>和<a href="https://psychology.hku.hk/people/andrew-luo/">心理学系</a>于 2024 年 10 月合聘。
                         </p>
                         <p>
                             我在2024从卡内基梅隆大学 (CMU) 获得了<a href="https://www.ml.cmu.edu/academics/joint-ml-phd.html#:~:text=PhD%20in%20Neural%20Computation%20%26%20Machine%20Learning"><u>机器学习</u>和<u>计算神经科学</u>联合博士学位</a>。在那里我与 <a href="https://www.cmu.edu/dietrich/psychology/directory/core-training-faculty/tarr-michael.html">Michael
