--- a/chinese.html
+++ b/chinese.html
@@ -24,18 +24,18 @@
                         <p class="name" style="text-align: center;">
                             Andrew Luo
                         </p>
-                        <p> 我是<a href="https://www.hku.hk/">香港大学</a>助理教授，博士生导师，由香港大学<a href="https://datascience.hku.hk/">数据科学研究院</a>和<a href="https://psychology.hku.hk/people/andrew-luo/">心理学系</a>于 2024 年 10 月合聘。
+                        <p> I am a tenure-track Assistant Professor at the <a href="https://www.hku.hk/">University of Hong Kong</a> jointly appointed by <a href="https://datascience.hku.hk/">Musketeers Foundation Institute of Data Science</a> and the <a href="https://psychology.hku.hk/people/andrew-luo/">Psychology Department</a> starting in 2024 October.
                         </p>
                         <p>
-                            我在2024从卡内基梅隆大学 (CMU) 获得了<a href="https://www.ml.cmu.edu/academics/joint-ml-phd.html#:~:text=PhD%20in%20Neural%20Computation%20%26%20Machine%20Learning"><u>机器学习</u>和<u>计算神经科学</u>联合博士学位</a>。在那里我与 <a href="https://www.cmu.edu/dietrich/psychology/directory/core-training-faculty/tarr-michael.html">Michael
+                            I received my <a href="https://www.ml.cmu.edu/academics/joint-ml-phd.html#:~:text=PhD%20in%20Neural%20Computation%20%26%20Machine%20Learning">joint PhD in <u>Machine Learning</u> & <u>Neural Computation</u></a> from Carnegie Mellon University (CMU) in 2024, where I worked with <a href="https://www.cmu.edu/dietrich/psychology/directory/core-training-faculty/tarr-michael.html">Michael
                             Tarr</a> and <a
-                                href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a> 一起工作。在此之前，我于 2019 年获得了麻省理工学院 (MIT) 计算机科学本科学位。我也从 CMU 获得了机器学习硕士学位。 </p><p>我的工作重点是理解<u>视觉感知背后的计算原理</u>，以及这些原理如何能帮助我们<u>改善并设计更好的AI生成模型</u>。最终，我的目标是弥合人类和机器视觉之间的差距，从而加深对人类认知的理解 & 达到人工智能的进步。
+                                href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a>. Before that, I earned my undergraduate degree in Computer Science from the Massachusetts Institute of Technology (MIT) in 2019. I also have a Master of Science in Machine Learning Research from CMU. </p><p>My work focuses on understanding the computational principles underlying <u>visual perception </u>and how these principles can inform the development of <u> improved generative models and intelligent machines</u>. Ultimately, I aim to bridge the gap between human and machine reasoning, leading to both a deeper understanding of human cognition and advancements in artificial intelligence.
 
 
                         </p>
-<!--                        <p style="font-size: 18px;color: seagreen">2024 年末和2025 夏天，我正在招有<u>机器视觉</u>, <u>AI for Neuroscience (NeuroAI)</u>, 和<u>图像生成模型</u>背景的博士生加入我的研究团队(加入港大)。也欢迎博士生，硕士生和本科生远程合作或者远程RA。请发送电子邮件至 aluo@hku.hk，附上简历和自我介绍。</p>-->
-<!--                        <p style="font-size: 18px;color: seagreen">2024 年 11 月 25 号更新：我已经完成了2025秋的IDS博士生录取。仍然在招收心理系的博士生。</p>-->
-                        <p style="font-size: 18px;color: mediumvioletred">我正在招收2026秋的博士生。(由7月1日2026年更新) </p><p style="font-size: 18px;color: seagreen">仍然欢迎博士生，硕士生和本科生远程合作或者RA。</p>
+<!--                        <p style="font-size: 18px;color: seagreen">For 2024 Winter and 2025 Fall &#45;&#45; I am recruiting PhDs candidates with a background in <u>computer vision</u>, <u>AI for Neuroscience (NeuroAI)</u>, and <u>image generative models</u> to join my research group (HKU PhD Admission). I also welcome RAs (remote or in-person) or remote collaboration with PhDs, master's, and undergraduates. Please send an email to aluo@hku.hk with a copy of your CV and a short statement about your interests.</p>-->
+<!--                        <p style="font-size: 18px;color: seagreen">2024 Nov 25 update: I have completed PhD student hiring for IDS this upcoming cycle. I continue to recruit PhD applicants through the Psychology department.</p>-->
+                        <p style="font-size: 18px;color: mediumvioletred">I am recruiting PhDs for 2026 Fall now. (Updated July 1, 2025)</p> <p style="font-size: 18px;color: seagreen">I welcome RAs (remote or in-person) or remote collaboration with PhDs, master's, and undergraduates.</p>
 
                         <p style="text-align:center">
                             <a href="mailto:luo_andrew@outlook.com">Email</a> &nbsp;/&nbsp;
@@ -44,7 +44,7 @@
                             <!--                  <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp;-->
                             <a href="https://github.com/aluo-x">Github</a>&nbsp;/&nbsp;
                             <a href="./wechat.html">WeChat</a> /
-                            <a href="./index.html">English</a>
+                            <a href="./chinese.html">中文</a>
                         </p>
                     </td>
                     <td style="padding:2.5%;width:40%;max-width:40%">
@@ -59,9 +59,9 @@
                 <tbody>
                 <tr>
                     <td style="padding:20px;width:100%;vertical-align:middle">
-                        <h2>研究</h2>
+                        <h2>Research</h2>
                         <p>
-                            我想理解人类的感知机理，并构建更好的生成模型和具有类人推理能力的机器。
+                            I am interested in understanding human perception and building better generative models and machines that are capable of human-like reasoning.
                         </p>
                     </td>
                 </tr>
@@ -70,7 +70,7 @@
 
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                 <tbody>
-                                <tr>
+                <tr>
                     <td style="padding:20px;width:25%;vertical-align:middle">
                         <img src="./images/ph_reg_teaser.jpg" alt="PontTuset" width="160" style="border-style: none">
                     </td>
@@ -84,7 +84,7 @@
                         * Co-first authors
                         <br>
 
-                        <span> <em>in submission</em> </span>
+                        <span style="color:orangered;"> <em>NeurIPS 2025</em> Spotlight</span>
                         <br>
                         <a href="https://arxiv.org/abs/2505.21501">arxiv
                             page</a> /
@@ -106,7 +106,7 @@
                         <a href="https://scholar.google.com/citations?hl=en&user=8fm4uE8AAAAJ">Muquan Yu</a>, <a href="https://openreview.net/profile?id=~Mu_Nan2">Mu Nan</a>, <a href="https://hosseinadeli.github.io/">Hossein Adeli</a>, <a href="https://jacob-prince.github.io/">Jacob S. Prince</a>, <a href="https://psych.uw.edu/people/9200">John A. Pyles</a>, <a href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a>, <a href="https://www.maggie-henderson.com/">Margaret M. Henderson</a>, <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr</a>, <strong>Andrew F. Luo</strong>
                         <br>
 
-                        <span> <em>in submission</em> </span>
+                        <em>NeurIPS 2025</em>
                         <br>
                         <a href="https://arxiv.org/abs/2505.15813">arxiv
                             page</a> /
@@ -115,8 +115,6 @@
                         <p>We show how to construct higher visual cortex encoders that can generalize across subjects, scanners, voxel sizes, protocols, and images without any additional finetuning by using meta-learning across subjects and in-context learning across stimuli.</p>
                     </td>
                 </tr>
-
-
                 <tr>
                     <td style="padding:20px;width:25%;vertical-align:middle">
                         <img src="./images/brainnerds_compressed.png" alt="PontTuset" width="160" style="border-style: none">
@@ -129,7 +127,7 @@
                         <a href="https://jacobyeung.org/">Jacob Yeung</a>, <strong>Andrew F. Luo</strong>, <a href="https://gabesarch.me/">Gabriel Sarch</a>, <a href="https://www.maggie-henderson.com/">Margaret M. Henderson</a>, <a href="https://www.cs.cmu.edu/~deva/">Deva Ramanan</a>, <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr</a>
                         <br>
 
-                        <span style="color:orangered;"> <em>CVPR 2025</em> oral</span>
+                        <span style="color:orangered;"> <em>CVPR 2025</em> Oral</span>
                         <br>
                         <a href="https://arxiv.org/abs/2406.02659">arxiv
                             page</a> /
@@ -149,7 +147,7 @@
                             <span class="papertitle">Brain Mapping with Dense Features: Grounding Cortical Semantic Selectivity in Natural Images With Vision Transformers</span>
                         </a>
                         <br>
-                        <strong>Andrew F. Luo</strong>, Jacob Yeung, Rushikesh Zawar, Shaurya Dewan, <a href="https://www.maggie-henderson.com/">Margaret M. Henderson</a>, <a href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe*</a>, <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr*</a>
+                        <strong>Andrew F. Luo</strong>, <a href="https://jacobyeung.org/">Jacob Yeung</a>, <a href="https://github.com/RBZ-99">Rushikesh Zawar</a>, <a href="https://srdewan.github.io/">Shaurya Dewan</a>, <a href="https://www.maggie-henderson.com/">Margaret M. Henderson</a>, <a href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe*</a>, <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr*</a>
                         <br>
                         * Co-corresponding authors
                         <br>
@@ -171,7 +169,7 @@
                             <span class="papertitle">Disentangled Acoustic Fields For Multimodal Physical Scene Understanding</span>
                         </a>
                         <br>
-                        Jie Yin, <strong>Andrew F. Luo</strong>, <a href="https://yilundu.github.io/">Yilun Du</a>, <a href="https://www.merl.com/people/cherian"> Anoop Cherian</a>, <a href="https://www.merl.com/people/tmarks">Tim K Marks</a>, <a href="https://www.jonathanleroux.org/">Jonathan Le Roux</a>, <a href="https://people.csail.mit.edu/ganchuang/">Chuang Gan</a>
+                        <a href="https://github.com/sjtuyinjie">Jie Yin</a>, <strong>Andrew F. Luo</strong>, <a href="https://yilundu.github.io/">Yilun Du</a>, <a href="https://www.merl.com/people/cherian"> Anoop Cherian</a>, <a href="https://www.merl.com/people/tmarks">Tim K Marks</a>, <a href="https://www.jonathanleroux.org/">Jonathan Le Roux</a>, <a href="https://people.csail.mit.edu/ganchuang/">Chuang Gan</a>
                         <br>
                         <em>IROS 2024</em>
                         <br>
@@ -191,7 +189,7 @@
                             <span class="papertitle">DiffusionPID: Interpreting Diffusion via Partial Information Decomposition</span>
                         </a>
                         <br>
-                        Shaurya Dewan, Rushikesh Zawar, Prakanshul Saxena, Yingshan Chang, <strong>Andrew F. Luo</strong>, <a href="https://talkingtorobots.com/yonatanbisk.html">Yonatan Bisk</a>
+                        <a href="https://srdewan.github.io/">Shaurya Dewan</a>, <a href="https://github.com/RBZ-99">Rushikesh Zawar</a>, <a href="https://scholar.google.com/citations?user=3Qqm9ycAAAAJ&hl=en">Prakanshul Saxena</a>, <a href="https://zdxdsw.github.io/">Yingshan Chang</a>, <strong>Andrew F. Luo</strong>, <a href="https://talkingtorobots.com/yonatanbisk.html">Yonatan Bisk</a>
                         <br>
                         <em>NeurIPS 2024</em>
                         <br>
@@ -236,7 +234,7 @@
                         <br>
                         * Co-corresponding authors
                         <br>
-                         <span style="color:orangered;"> <em>NeurIPS 2023</em> oral</span>, (top 0.7% of all submissions)
+                         <span style="color:orangered;"> <em>NeurIPS 2023</em> Oral</span>, (top 0.7% of all submissions)
                         <br>
                         <a href="https://www.cs.cmu.edu/~afluo/BrainDiVE/">project
                             page</a> /
