--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         * Co-first authors
                         <br>
 
-                        <span> <em>in submission</em> </span>
+                        <span style="color:orangered;"> <em>NeurIPS 2025</em> Spotlight</span>
                         <br>
                         <a href="https://arxiv.org/abs/2505.21501">arxiv
                             page</a> /
@@ -106,7 +106,7 @@
                         <a href="https://scholar.google.com/citations?hl=en&user=8fm4uE8AAAAJ">Muquan Yu</a>, <a href="https://openreview.net/profile?id=~Mu_Nan2">Mu Nan</a>, <a href="https://hosseinadeli.github.io/">Hossein Adeli</a>, <a href="https://jacob-prince.github.io/">Jacob S. Prince</a>, <a href="https://psych.uw.edu/people/9200">John A. Pyles</a>, <a href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a>, <a href="https://www.maggie-henderson.com/">Margaret M. Henderson</a>, <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr</a>, <strong>Andrew F. Luo</strong>
                         <br>
 
-                        <span> <em>in submission</em> </span>
+                        <em>NeurIPS 2025</em>
                         <br>
                         <a href="https://arxiv.org/abs/2505.15813">arxiv
                             page</a> /
@@ -127,7 +127,7 @@
                         <a href="https://jacobyeung.org/">Jacob Yeung</a>, <strong>Andrew F. Luo</strong>, <a href="https://gabesarch.me/">Gabriel Sarch</a>, <a href="https://www.maggie-henderson.com/">Margaret M. Henderson</a>, <a href="https://www.cs.cmu.edu/~deva/">Deva Ramanan</a>, <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr</a>
                         <br>
 
-                        <span style="color:orangered;"> <em>CVPR 2025</em> oral</span>
+                        <span style="color:orangered;"> <em>CVPR 2025</em> Oral</span>
                         <br>
                         <a href="https://arxiv.org/abs/2406.02659">arxiv
                             page</a> /
@@ -234,7 +234,7 @@
                         <br>
                         * Co-corresponding authors
                         <br>
-                         <span style="color:orangered;"> <em>NeurIPS 2023</em> oral</span>, (top 0.7% of all submissions)
+                         <span style="color:orangered;"> <em>NeurIPS 2023</em> Oral</span>, (top 0.7% of all submissions)
                         <br>
                         <a href="https://www.cs.cmu.edu/~afluo/BrainDiVE/">project
                             page</a> /
