--- a/chinese.html
+++ b/chinese.html
@@ -22,20 +22,20 @@
                 <tr style="padding:0px">
                     <td style="padding:2.5%;width:65%;vertical-align:middle">
                         <p class="name" style="text-align: center;">
-                            Andrew Luo
+                            Andrew Luo (罗逸飞)
                         </p>
-                        <p> I am a tenure-track Assistant Professor at the <a href="https://www.hku.hk/">University of Hong Kong</a> jointly appointed by <a href="https://datascience.hku.hk/">Musketeers Foundation Institute of Data Science</a> and the <a href="https://psychology.hku.hk/people/andrew-luo/">Psychology Department</a> starting in 2024 October.
+                        <p> 我是<a href="https://www.hku.hk/">香港大学</a>助理教授，博士生导师，由香港大学<a href="https://datascience.hku.hk/">数据科学研究院</a>和<a href="https://psychology.hku.hk/people/andrew-luo/">心理学系</a>于 2024 年 10 月合聘。
                         </p>
                         <p>
-                            I received my <a href="https://www.ml.cmu.edu/academics/joint-ml-phd.html#:~:text=PhD%20in%20Neural%20Computation%20%26%20Machine%20Learning">joint PhD in <u>Machine Learning</u> & <u>Neural Computation</u></a> from Carnegie Mellon University (CMU) in 2024, where I worked with <a href="https://www.cmu.edu/dietrich/psychology/directory/core-training-faculty/tarr-michael.html">Michael
+                            我在2024从卡内基梅隆大学 (CMU) 获得了<a href="https://www.ml.cmu.edu/academics/joint-ml-phd.html#:~:text=PhD%20in%20Neural%20Computation%20%26%20Machine%20Learning"><u>机器学习</u>和<u>计算神经科学</u>联合博士学位</a>。在那里我与 <a href="https://www.cmu.edu/dietrich/psychology/directory/core-training-faculty/tarr-michael.html">Michael
                             Tarr</a> and <a
-                                href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a>. Before that, I earned my undergraduate degree in Computer Science from the Massachusetts Institute of Technology (MIT) in 2019. I also have a Master of Science in Machine Learning Research from CMU. </p><p>My work focuses on understanding the computational principles underlying <u>visual perception </u>and how these principles can inform the development of <u> improved generative models and intelligent machines</u>. Ultimately, I aim to bridge the gap between human and machine reasoning, leading to both a deeper understanding of human cognition and advancements in artificial intelligence.
+                                href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a> 一起工作。在此之前，我于 2019 年获得了麻省理工学院 (MIT) 计算机科学本科学位。我也从 CMU 获得了机器学习硕士学位。 </p><p>我的工作重点是理解<u>视觉感知背后的计算原理</u>，以及这些原理如何能帮助我们<u>改善并设计更好的AI生成模型</u>。最终，我的目标是弥合人类和机器视觉之间的差距，从而加深对人类认知的理解 & 达到人工智能的进步。
 
 
                         </p>
-<!--                        <p style="font-size: 18px;color: seagreen">For 2024 Winter and 2025 Fall &#45;&#45; I am recruiting PhDs candidates with a background in <u>computer vision</u>, <u>AI for Neuroscience (NeuroAI)</u>, and <u>image generative models</u> to join my research group (HKU PhD Admission). I also welcome RAs (remote or in-person) or remote collaboration with PhDs, master's, and undergraduates. Please send an email to aluo@hku.hk with a copy of your CV and a short statement about your interests.</p>-->
-<!--                        <p style="font-size: 18px;color: seagreen">2024 Nov 25 update: I have completed PhD student hiring for IDS this upcoming cycle. I continue to recruit PhD applicants through the Psychology department.</p>-->
-                        <p style="font-size: 18px;color: mediumvioletred">I am recruiting PhDs for 2026 Fall now. (Updated July 1, 2025)</p> <p style="font-size: 18px;color: seagreen">I welcome RAs (remote or in-person) or remote collaboration with PhDs, master's, and undergraduates.</p>
+<!--                        <p style="font-size: 18px;color: seagreen">2024 年末和2025 夏天，我正在招有<u>机器视觉</u>, <u>AI for Neuroscience (NeuroAI)</u>, 和<u>图像生成模型</u>背景的博士生加入我的研究团队(加入港大)。也欢迎博士生，硕士生和本科生远程合作或者远程RA。请发送电子邮件至 aluo@hku.hk，附上简历和自我介绍。</p>-->
+<!--                        <p style="font-size: 18px;color: seagreen">2024 年 11 月 25 号更新：我已经完成了2025秋的IDS博士生录取。仍然在招收心理系的博士生。</p>-->
+                        <p style="font-size: 18px;color: mediumvioletred">我正在招收2026秋的博士生。(由7月1日2026年更新) </p><p style="font-size: 18px;color: seagreen">仍然欢迎博士生，硕士生和本科生远程合作或者RA。</p>
 
                         <p style="text-align:center">
                             <a href="mailto:luo_andrew@outlook.com">Email</a> &nbsp;/&nbsp;
@@ -44,7 +44,7 @@
                             <!--                  <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp;-->
                             <a href="https://github.com/aluo-x">Github</a>&nbsp;/&nbsp;
                             <a href="./wechat.html">WeChat</a> /
-                            <a href="./chinese.html">中文</a>
+                            <a href="./index.html">English</a>
                         </p>
                     </td>
                     <td style="padding:2.5%;width:40%;max-width:40%">
@@ -59,9 +59,9 @@
                 <tbody>
                 <tr>
                     <td style="padding:20px;width:100%;vertical-align:middle">
-                        <h2>Research</h2>
+                        <h2>研究</h2>
                         <p>
-                            I am interested in understanding human perception and building better generative models and machines that are capable of human-like reasoning.
+                            我想理解人类的感知机理，并构建更好的生成模型和具有类人推理能力的机器。
                         </p>
                     </td>
                 </tr>
@@ -376,3 +376,4 @@
             </table>
 </body>
 </html>
+
