--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
         <td style="padding:0px">
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                 <tbody>
-                <tr style="padding:0px">
+                <tr class="profile-row" style="padding:0px">
                     <td style="padding:2.5%;width:65%;vertical-align:middle">
                         <p class="name" style="text-align: center;">
                             Andrew Luo
                         </p>
+                        <img src="images/profile_2.jpg" class="mobile-photo" alt="profile photo">
+
                         <p> I am a tenure-track Assistant Professor at the <a href="https://www.hku.hk/">University of Hong Kong</a> jointly appointed by <a href="https://datascience.hku.hk/">Musketeers Foundation Institute of Data Science</a> and the <a href="https://psychology.hku.hk/people/andrew-luo/">Psychology Department</a> starting in 2024 October.
                         </p>
                         <p>
@@ -47,14 +49,74 @@
                             <a href="./chinese.html">中文</a>
                         </p>
                     </td>
-                    <td style="padding:2.5%;width:40%;max-width:40%">
-                        <img style="width:100%;max-width:100%" alt="profile photo"
-                                                            src="images/profile_2.jpg" class="hoverZoomLink">
-                    </td>
+                    <td class="photo-cell" style="padding:2.5%;width:40%;max-width:40%">
+        <img style="width:100%;max-width:100%" alt="profile photo" src="images/profile_2.jpg" class="hoverZoomLink">
+    </td>
                 </tr>
                 </tbody>
             </table>
+            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+    <tbody>
+                <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+                <h2>Students (sorted by year and last name)</h2>
+                <ul style="list-style-type: none; padding-left: 0; margin-top: 10px;">
 
+                    <!-- Student 1 -->
+                    <li style="margin-bottom: 10px;">
+                        <strong><a href="https://sagecao1125.github.io/"> Jiahang Cao</a> (<a href="mailto:jiahangcao@connect.hku.hk">email</a>)</strong> &nbsp;/&nbsp; PhD (starting 2025). HKUST (GZ) MSc
+                    </li>
+
+                    <!-- Student 2 -->
+                    <li style="margin-bottom: 10px;">
+                        <strong><a href="https://michaelmaiii.github.io/"> Weijian Mai</a> (<a href="mailto:weijian.mai@connect.hku.hk">email</a>)</strong> &nbsp;/&nbsp; PhD (starting 2025). SCUT MSc
+                    </li>
+
+                    <!-- Student 3 -->
+                    <li style="margin-bottom: 10px;">
+                        <strong>Mu Nan (<a href="mailto:ezacngmpg@connect.hku.hk">email</a>)</strong> &nbsp;/&nbsp; PhD (starting 2025). University of Manchester MSc
+                    </li>
+
+                    <!-- Student 4 -->
+                    <li style="margin-bottom: 10px;">
+                        <strong>Rui Zhang (<a href="mailto:ruizhang97@connect.hku.hk">email</a>)</strong> &nbsp;/&nbsp; PhD (starting 2025). Fudan MSc
+                    </li>
+
+                </ul>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+    <tbody>
+                <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+                <h2>Collaborators (sorted by year and last name)</h2>
+                <ul style="list-style-type: none; padding-left: 0; margin-top: 10px;">
+
+                    <!-- Student 1 -->
+                    <li style="margin-bottom: 10px;">
+                        <strong>Muquan Yu (<a href="mailto:leomqyu@outlook.com">email</a>)</strong> &nbsp;/&nbsp; RA 2025; Now HKU PhD
+                    </li>
+
+                    <!-- Student 2 -->
+                    <li style="margin-bottom: 10px;">
+                        <strong>Yinjie Chen (<a href="mailto:maxwellcaffrey915@gmail.com">email</a>)</strong> &nbsp;/&nbsp; RA 2025; Now applying to PhD
+                    </li>
+
+                    <!-- Student 3 -->
+                    <li style="margin-bottom: 10px;">
+                        <strong>Zipeng Yan (<a href="mailto:kelvinyzp@gmail.com">email</a>)</strong> &nbsp;/&nbsp; RA 2025; Now in industry
+                    </li>
+
+                    <!-- Student 4 -->
+
+                </ul>
+            </td>
+        </tr>
+    </tbody>
+</table>
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                 <tbody>
                 <tr>
@@ -295,12 +357,12 @@
                             <span class="papertitle">Prototype memory and attention mechanisms for few shot image generation</span>
                         </a>
                         <br>
-                        <a href="https://crazy-jack.github.io/">Tianqin Li*</a>, <a href="https://zijieli-jlee.github.io/">Zijie Li*</a>, <strong>Andrew F. Luo</strong>, <a href="https://cns.uchicago.edu/program/students/harold-rockwell">Harold Rockwell, <a href="https://sites.google.com/view/barati">Amir Barati Farimani</a>, <a href="https://www.cnbc.cmu.edu/~tai/">Tai Sing Lee</a>
+                        <a href="https://crazy-jack.github.io/">Tianqin Li*</a>, <a href="https://zijieli-jlee.github.io/">Zijie Li*</a>, <strong>Andrew F. Luo</strong>, <a href="https://cns.uchicago.edu/program/students/harold-rockwell">Harold Rockwell</a>, <a href="https://sites.google.com/view/barati">Amir Barati Farimani</a>, <a href="https://www.cnbc.cmu.edu/~tai/">Tai Sing Lee</a>
 
                         <br>
                         <em>ICLR 2022</em>
                         <br>
-                        <a href="data/moca_bib.html">bibtex</a> /
+                        <a href="data/moca_bib.html">bibtex</a>
                         <a href="https://github.com/Crazy-Jack/MoCA_release">code</a>
                         <p></p>
                         <p>We show that having a prototype memory with attention mechanisms can improve image synthesis quality, and learn interpretable visual concept clusters.</p>
