--- a/chinese.html
+++ b/chinese.html
@@ -24,7 +24,7 @@
                         <p class="name" style="text-align: center;">
                             Andrew Luo (罗逸飞)
                         </p>
-                        <p> 我是<a href="https://www.hku.hk/">香港大学</a>助理教授，博士生导师，由香港大学<a href="https://datascience.hku.hk/">数据科学研究院</a>和<a href="https://psychology.hku.hk/people/andrew-luo/">心理学系</a>于 2024 年 10 月合聘。
+                        <p> 我是<a href="https://www.hku.hk/">香港大学</a>助理教授，博士生导师，由香港大学<a href="https://datascience.hku.hk/">数据科学研究院</a>和<a href="https://psychology.hku.hk/people/andrew-luo/">心理学系</a>合聘。
                         </p>
                         <p>
                             我在2024从卡内基梅隆大学 (CMU) 获得了<a href="https://www.ml.cmu.edu/academics/joint-ml-phd.html#:~:text=PhD%20in%20Neural%20Computation%20%26%20Machine%20Learning"><u>机器学习</u>和<u>计算神经科学</u>联合博士学位</a>。在那里我与 <a href="https://www.cmu.edu/dietrich/psychology/directory/core-training-faculty/tarr-michael.html">Michael
@@ -33,9 +33,12 @@
 
 
                         </p>
+<!--                        <p style="font-size: 18px;color: seagreen">-->
+<!--                            PhD 招生方向: 脑解码 & 机器人控制与学习 & 场景理解与策划的 3D 重构 & 模型理解和生成模型理论。-->
+<!--                        </p>-->
 <!--                        <p style="font-size: 18px;color: seagreen">2024 年末和2025 夏天，我正在招有<u>机器视觉</u>, <u>AI for Neuroscience (NeuroAI)</u>, 和<u>图像生成模型</u>背景的博士生加入我的研究团队(加入港大)。也欢迎博士生，硕士生和本科生远程合作或者远程RA。请发送电子邮件至 aluo@hku.hk，附上简历和自我介绍。</p>-->
 <!--                        <p style="font-size: 18px;color: seagreen">2024 年 11 月 25 号更新：我已经完成了2025秋的IDS博士生录取。仍然在招收心理系的博士生。</p>-->
-                        <p style="font-size: 18px;color: mediumvioletred">我正在招收2026秋的博士生。(由7月1日2026年更新) </p><p style="font-size: 18px;color: seagreen">仍然欢迎博士生，硕士生和本科生远程合作或者RA。</p>
+                        <p style="font-size: 18px;color: mediumvioletred">我正在招收2026秋的博士生。(由12月1日2026年更新) </p><p style="font-size: 18px;color: seagreen">仍然欢迎博士生，硕士生和本科生远程合作或者RA。</p>
 
                         <p style="text-align:center">
                             <a href="mailto:luo_andrew@outlook.com">Email</a> &nbsp;/&nbsp;
@@ -70,6 +73,30 @@
 
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                 <tbody>
+                <tr>
+                    <td style="padding:20px;width:25%;vertical-align:middle">
+                        <img src="./images/compose_teaser.jpg" alt="PontTuset" width="160" style="border-style: none">
+                    </td>
+                    <td width="75%" valign="middle">
+                        <a href="https://arxiv.org/abs/2510.01068" id="compose">
+                            <span class="papertitle">Compose Your Policies! Improving Diffusion-based or Flow-based Robot Policies via Test-time Distribution-level Composition
+</span>
+                        </a>
+                        <br>
+                        Jiahang Cao*, Yize Huang*, Hanzhong Guo, Rui Zhang, Mu Nan, Weijian Mai, Jiaxu Wang, Hao Cheng, Jingkai Sun, Gang Han, Wen Zhao, Qiang Zhang, Yijie Guo, Qihao Zheng, Chunfeng Song, Xiao Li, Ping Luo, <strong>Andrew F. Luo</strong>
+                        <br>
+                        * Co-first authors
+                        <br>
+
+                        <span><em>In submission</em></span>
+                        <br>
+                        <a href="https://arxiv.org/abs/2510.01068">arxiv
+                            page</a> /
+                            <a href="data/compose_bib.html">bibtex</a>
+                        <p></p>
+                        <p>We show that composition of diffusion policies can yield consistent improvements across a diverse set of tasks. By utilizing test-time search, we can obtain a policy that is stronger than parent policies by seeking out consensus regions.</p>
+                    </td>
+                </tr>
                 <tr>
                     <td style="padding:20px;width:25%;vertical-align:middle">
                         <img src="./images/ph_reg_teaser.jpg" alt="PontTuset" width="160" style="border-style: none">
