--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         </p>
                         <img src="images/profile_2.jpg" class="mobile-photo" alt="profile photo">
 
-                        <p> I am a tenure-track Assistant Professor at the <a href="https://www.hku.hk/">University of Hong Kong</a> jointly appointed by <a href="https://datascience.hku.hk/">Musketeers Foundation Institute of Data Science</a> and the <a href="https://psychology.hku.hk/people/andrew-luo/">Psychology Department</a> starting in 2024 October.
+                        <p> I am a tenure-track Assistant Professor at the <a href="https://www.hku.hk/">University of Hong Kong</a> jointly appointed by <a href="https://datascience.hku.hk/">Musketeers Foundation Institute of Data Science</a> and the <a href="https://psychology.hku.hk/people/andrew-luo/">Psychology Department</a>.
                         </p>
                         <p>
                             I received my <a href="https://www.ml.cmu.edu/academics/joint-ml-phd.html#:~:text=PhD%20in%20Neural%20Computation%20%26%20Machine%20Learning">joint PhD in <u>Machine Learning</u> & <u>Neural Computation</u></a> from Carnegie Mellon University (CMU) in 2024, where I worked with <a href="https://www.cmu.edu/dietrich/psychology/directory/core-training-faculty/tarr-michael.html">Michael
@@ -35,9 +35,12 @@
 
 
                         </p>
+<!--                        <p style="font-size: 18px;color: seagreen">-->
+<!--                            PhD student recruitment focus: Brain Decoding & <br> Robotic Learning/Planning/Control & 3D Reconstruction for Planning and Scene Understanding & Model Interpretability and Generative Model Theory.-->
+<!--                        </p>-->
 <!--                        <p style="font-size: 18px;color: seagreen">For 2024 Winter and 2025 Fall &#45;&#45; I am recruiting PhDs candidates with a background in <u>computer vision</u>, <u>AI for Neuroscience (NeuroAI)</u>, and <u>image generative models</u> to join my research group (HKU PhD Admission). I also welcome RAs (remote or in-person) or remote collaboration with PhDs, master's, and undergraduates. Please send an email to aluo@hku.hk with a copy of your CV and a short statement about your interests.</p>-->
 <!--                        <p style="font-size: 18px;color: seagreen">2024 Nov 25 update: I have completed PhD student hiring for IDS this upcoming cycle. I continue to recruit PhD applicants through the Psychology department.</p>-->
-                        <p style="font-size: 18px;color: mediumvioletred">I am recruiting PhDs for 2026 Fall now. (Updated July 1, 2025)</p> <p style="font-size: 18px;color: seagreen">I welcome RAs (remote or in-person) or remote collaboration with PhDs, master's, and undergraduates.</p>
+                        <p style="font-size: 18px;color: mediumvioletred">I am recruiting PhDs for 2026 Fall now. (Updated Dec 1, 2025)</p> <p style="font-size: 18px;color: seagreen">I welcome RAs (remote or in-person) or remote collaboration with PhDs, master's, and undergraduates.</p>
 
                         <p style="text-align:center">
                             <a href="mailto:luo_andrew@outlook.com">Email</a> &nbsp;/&nbsp;
@@ -132,6 +135,30 @@
 
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                 <tbody>
+                <tr>
+                    <td style="padding:20px;width:25%;vertical-align:middle">
+                        <img src="./images/compose_teaser.jpg" alt="PontTuset" width="160" style="border-style: none">
+                    </td>
+                    <td width="75%" valign="middle">
+                        <a href="https://arxiv.org/abs/2510.01068" id="compose">
+                            <span class="papertitle">Compose Your Policies! Improving Diffusion-based or Flow-based Robot Policies via Test-time Distribution-level Composition
+</span>
+                        </a>
+                        <br>
+                        Jiahang Cao*, Yize Huang*, Hanzhong Guo, Rui Zhang, Mu Nan, Weijian Mai, Jiaxu Wang, Hao Cheng, Jingkai Sun, Gang Han, Wen Zhao, Qiang Zhang, Yijie Guo, Qihao Zheng, Chunfeng Song, Xiao Li, Ping Luo, <strong>Andrew F. Luo</strong>
+                        <br>
+                        * Co-first authors
+                        <br>
+
+                        <span><em>In submission</em></span>
+                        <br>
+                        <a href="https://arxiv.org/abs/2510.01068">arxiv
+                            page</a> /
+                            <a href="data/compose_bib.html">bibtex</a>
+                        <p></p>
+                        <p>We show that composition of diffusion policies can yield consistent improvements across a diverse set of tasks. By utilizing test-time search, we can obtain a policy that is stronger than parent policies by seeking out consensus regions.</p>
+                    </td>
+                </tr>
                 <tr>
                     <td style="padding:20px;width:25%;vertical-align:middle">
                         <img src="./images/ph_reg_teaser.jpg" alt="PontTuset" width="160" style="border-style: none">
