--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                     <!-- Student 3 -->
                     <li style="margin-bottom: 10px;">
-                        <strong>Mu Nan (<a href="mailto:ezacngmpg@connect.hku.hk">email</a>)</strong> &nbsp;/&nbsp; PhD (starting 2025). University of Manchester MSc
+                        <strong><a href="https://ezacngm.github.io"> Mu Nan</a> (<a href="mailto:ezacngmpg@connect.hku.hk">email</a>)</strong> &nbsp;/&nbsp; PhD (starting 2025). University of Manchester MSc
                     </li>
 
                     <!-- Student 4 -->
