--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                         <p>We show that composition of diffusion policies can yield consistent improvements across a diverse set of tasks. By utilizing test-time search, we can obtain a policy that is stronger than parent policies by seeking out consensus regions.</p>
                     </td>
                 </tr>
+
                 <tr>
                     <td style="padding:20px;width:25%;vertical-align:middle">
                         <img src="./images/ph_reg_teaser.jpg" alt="PontTuset" width="160" style="border-style: none">
@@ -202,6 +203,27 @@
                             <a href="data/Braincorl_bib.html">bibtex</a>
                         <p></p>
                         <p>We show how to construct higher visual cortex encoders that can generalize across subjects, scanners, voxel sizes, protocols, and images without any additional finetuning by using meta-learning across subjects and in-context learning across stimuli.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="padding:20px;width:25%;vertical-align:middle">
+                        <img src="./images/insilico.jpg" alt="PontTuset" width="160" style="border-style: none">
+                    </td>
+                    <td width="75%" valign="middle">
+                        <a href="https://arxiv.org/abs/2510.21142" id="brain_silico">
+                            <span class="papertitle">In Silico Mapping of Visual Categorical Selectivity Across the Whole Brain</span>
+                        </a>
+                        <br>
+                        <a href="https://x.com/ethanhwang_">Ethan Hwang</a>, <a href="https://hosseinadeli.github.io/">Hossein Adeli</a>, <a href="https://psychology.columbia.edu/content/wenxuan-guo">Wenxuan Guo</a>, <strong>Andrew F. Luo</strong>, <a href="https://zuckermaninstitute.columbia.edu/nikolaus-kriegeskorte-phd">Nikolaus Kriegeskorte</a>
+                        <br>
+
+                        <span><em>NeurIPS 2025</em></span>
+                        <br>
+                        <a href="https://arxiv.org/abs/2510.21142">arxiv
+                            page</a> /
+                            <a href="data/brainsilico_bib.html">bibtex</a>
+                        <p></p>
+                        <p>Computational tests of selectivity using more accurate transformer encoders of the brain.</p>
                     </td>
                 </tr>
                 <tr>
