--- a/chinese.html
+++ b/chinese.html
@@ -144,6 +144,27 @@
                 </tr>
                 <tr>
                     <td style="padding:20px;width:25%;vertical-align:middle">
+                        <img src="./images/insilico.jpg" alt="PontTuset" width="160" style="border-style: none">
+                    </td>
+                    <td width="75%" valign="middle">
+                        <a href="https://arxiv.org/abs/2510.21142" id="brain_silico">
+                            <span class="papertitle">In Silico Mapping of Visual Categorical Selectivity Across the Whole Brain</span>
+                        </a>
+                        <br>
+                        <a href="https://x.com/ethanhwang_">Ethan Hwang</a>, <a href="https://hosseinadeli.github.io/">Hossein Adeli</a>, <a href="https://psychology.columbia.edu/content/wenxuan-guo">Wenxuan Guo</a>, <strong>Andrew F. Luo</strong>, <a href="https://zuckermaninstitute.columbia.edu/nikolaus-kriegeskorte-phd">Nikolaus Kriegeskorte</a>
+                        <br>
+
+                        <span><em>NeurIPS 2025</em></span>
+                        <br>
+                        <a href="https://arxiv.org/abs/2510.21142">arxiv
+                            page</a> /
+                            <a href="data/brainsilico_bib.html">bibtex</a>
+                        <p></p>
+                        <p>Computational tests of selectivity using more accurate transformer encoders of the brain.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="padding:20px;width:25%;vertical-align:middle">
                         <img src="./images/brainnerds_compressed.png" alt="PontTuset" width="160" style="border-style: none">
                     </td>
                     <td width="75%" valign="middle">
