--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
                     <!-- Student 4 -->
                     <li style="margin-bottom: 10px;">
-                        <strong>Rui Zhang (<a href="mailto:ruizhang97@connect.hku.hk">email</a>)</strong> &nbsp;/&nbsp; PhD (starting 2025). Fudan MSc
+                        <strong><a href="https://kiddoray.github.io/">Rui Zhang</a> (<a href="mailto:ruizhang97@connect.hku.hk">email</a>)</strong> &nbsp;/&nbsp; PhD (starting 2025). Fudan MSc
                     </li>
 
                 </ul>
